--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,20 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TDCB6oVjHwOz+BUwQPL86CD/ASPCxahB31IpEttcqPQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://trade.dev
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PORT=8889
+DB_DATABASE=trading
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
+CACHE_DRIVER=apc
+SESSION_DRIVER=apc
 QUEUE_DRIVER=sync
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
@@ -28,5 +24,5 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_KEY=
+PUSHER_SECRET=
