--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "artesaos/seotools": "^0.10.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "artesaos/seotools": "^0.10.0",
+        "maatwebsite/excel": "^2.1",
         "venturecraft/revisionable": "^1.28",
         "yajra/laravel-datatables-oracle": "~6.0",
         "zizaco/entrust": "^1.7"
