--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-  "/js/index.js": "/js/index.js",
+  "/mix.js": "/mix.js",
   "/css/default.css": "/css/default.css",
   "/css/login.min.css": "/css/login.min.css",
   "/css/error.min.css": "/css/error.min.css",
